index.html updates

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </div>
 
     <div id="footer">
-        &copy; copyright 2017 Courtney Williams
+        &copy; copyright 2018 Courtney Olivia
     </div>
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/js/pp.js"></script>
 </body>
 
 </html>
