updates to html and css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <h1>Welcome to the Psychic Game</h1>
+    <h1>Paw Patrol Character Index</h1>
     <div id="content">
-        <img src="assets/images/crystalball.png">
+        <img src="assets/img/dogs.png">
     </div>
 
     <div id="box1">
