--- a/index.html
+++ b/index.html
@@ -2,46 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <title>Paw Patrol Character Index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Paw Patrol Character Index</h1>
-    <div id="content">
-        <img src="assets/img/dogs.png">
+
+    <div class="header">
+        <h1>Paw Patrol Character Index</h1>
     </div>
 
-    <div id="box1">
-        <h1>Do you dare?</h1>
-        <h2>Guess what letter I am thinking of...</h2>
-        <h3>Try to guess the right letter! Any letter from A - Z.</h3>
+    <img src="assets/img/dogs.png">
+
+    <h4>Click a character to view their information.</h4>
+
+    <div class="nav">
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
     </div>
-    <div id="box2">
-        <!-- This is where we will have the win counter in HTML. It initially shows 0  -->
-        <p>Wins:
-            <span id="wins">0</span>
-        </p>
 
-        <!-- This is where we will have the loss counter in HTML. It initially shows 0 -->
-        <p>Losses:
-            <span id="losses">0</span>
-        </p>
-
-        <!-- This is where we will post the guessesLeft. Initially nothing is shown. -->
-        <p>Guesses Left:
-            <span id="guesses-left"></span>
-        </p>
-
-        <!-- This is where we will post the guessesSoFar. Initially nothing is shown. -->
-        <p>Your Guesses so far:
-            <span id="guesses-so-far"></span>
-        </p>
-
-    </div>
 
     <div id="footer">
         &copy; copyright 2018 Courtney Olivia
