--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Paw Patrol Character Index</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
@@ -21,7 +22,7 @@
     <h4>Click a character to view their information.</h4>
 
     <div class="nav">
-        <a href="#">Link</a>
+        <a href="#"></a>
         <a href="#">Link</a>
         <a href="#">Link</a>
     </div>
