Added changes to css and html files

--- a/index.html
+++ b/index.html
@@ -15,16 +15,47 @@
 
     <div class="header">
         <h1>Paw Patrol Character Index</h1>
+        <img src="assets/img/dogs.png">
+
+        <h4>Click a character to view their information</h4>
     </div>
-
-    <img src="assets/img/dogs.png">
-
-    <h4>Click a character to view their information.</h4>
 
     <div class="nav">
         <a href="#"></a>
         <a href="#">Link</a>
         <a href="#">Link</a>
+    </div>
+
+    <div id="main">
+        <div class="row">
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis
+                    velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam
+                    placerat,
+                    purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan
+                    convallis.</p>
+            </div>
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis
+                    velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam
+                    placerat,
+                    purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan
+                    convallis.</p>
+            </div>
+            <div class="column">
+                <h2>Column</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
+                    venenatis
+                    velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam
+                    placerat,
+                    purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan
+                    convallis.</p>
+            </div>
+        </div>
     </div>
 
 
