Added changes to css and html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+    <div class="main">
     <div class="header">
         <h1>Paw Patrol Character Index</h1>
         <img src="assets/img/dogs.png">
@@ -21,43 +22,54 @@
     </div>
 
     <div class="nav">
-        <a href="#"></a>
+        <a href="#">Link</a>
         <a href="#">Link</a>
         <a href="#">Link</a>
     </div>
 
-    <div id="main">
-        <div class="row">
-            <div class="column">
-                <h2>Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                    venenatis
-                    velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam
-                    placerat,
-                    purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan
-                    convallis.</p>
-            </div>
-            <div class="column">
-                <h2>Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                    venenatis
-                    velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam
-                    placerat,
-                    purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan
-                    convallis.</p>
-            </div>
-            <div class="column">
-                <h2>Column</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus
-                    venenatis
-                    velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam
-                    placerat,
-                    purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan
-                    convallis.</p>
-            </div>
-        </div>
+<div id="main">
+    <div class="gallery">
+        <a target="_blank" href="#">
+            <img src="assets/img/marshall.png" alt="Marshall" width="600" height="400">
+        </a>
+        <div class="desc">Marshall</div>
     </div>
 
+    <div class="gallery">
+        <a target="_blank" href="#">
+            <img src="assets/img/chase.png" alt="Chase" width="600" height="400">
+        </a>
+        <div class="desc">Chase</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="#">
+            <img src="assets/img/rubble.png" alt="Rubble" width="600" height="400">
+        </a>
+        <div class="desc">Rubble</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="#">
+            <img src="assets/img/skye.png" alt="Skye" width="600" height="400">
+        </a>
+        <div class="desc">Skye</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="#">
+            <img src="assets/img/zuma.png" alt="Zuma" width="600" height="400">
+        </a>
+            <div class="desc">Zuma</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="#">
+            <img src="assets/img/rocky.png" alt="Rocky" width="600" height="400">
+        </a>
+        <div class="desc">Rocky</div>
+    </div>
+</div>
 
     <div id="footer">
         &copy; copyright 2018 Courtney Olivia
