--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -17,56 +18,56 @@
         <h1>Paw Patrol Character Index</h1>
         <img src="assets/img/dogs.png">
 
-        <h4>Click a character to view their information</h4>
+        <h4>Click a character to learn an interesting fact about them!</h4>
     </div>
 
     <div class="nav">
-        <a href="#">Link</a>
-        <a href="#">Link</a>
-        <a href="#">Link</a>
+        <a href="#">Paw Patrol Fan Wiki</a>
+        <a href="#">About Creator</a>
+        <a href="#">Contact</a>
     </div>
 
 <div id="main">
+    <div id="pic1">
     <div class="gallery">
-        <a target="_blank" href="#">
             <img src="assets/img/marshall.png" alt="Marshall" width="600" height="400">
-        </a>
         <div class="desc">Marshall</div>
     </div>
+    </div>
 
+    <div id="pic2">
     <div class="gallery">
-        <a target="_blank" href="#">
             <img src="assets/img/chase.png" alt="Chase" width="600" height="400">
-        </a>
         <div class="desc">Chase</div>
     </div>
+    </div>
 
+    <div id="pic3">
     <div class="gallery">
-        <a target="_blank" href="#">
             <img src="assets/img/rubble.png" alt="Rubble" width="600" height="400">
-        </a>
         <div class="desc">Rubble</div>
     </div>
+    </div>
 
+    <div id="pic4">
     <div class="gallery">
-        <a target="_blank" href="#">
             <img src="assets/img/skye.png" alt="Skye" width="600" height="400">
-        </a>
         <div class="desc">Skye</div>
     </div>
-
-    <div class="gallery">
-        <a target="_blank" href="#">
-            <img src="assets/img/zuma.png" alt="Zuma" width="600" height="400">
-        </a>
-            <div class="desc">Zuma</div>
     </div>
 
+    <div id="pic5">
     <div class="gallery">
-        <a target="_blank" href="#">
+            <img src="assets/img/zuma.png" alt="Zuma" width="600" height="400">
+            <div class="desc">Zuma</div>
+    </div>
+    </div>
+
+    <div id="pic6">
+    <div class="gallery">
             <img src="assets/img/rocky.png" alt="Rocky" width="600" height="400">
-        </a>
         <div class="desc">Rocky</div>
+    </div>
     </div>
 </div> 
 
@@ -74,7 +75,7 @@
     <div id="footer">
         &copy; copyright 2018 Courtney Olivia
     </div>
-    <script type="text/javascript" src="assets/js/pp.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 
 </html>
