Added contact page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     </div>
 
     <div class="nav">
-        <a href="#">Paw Patrol Fan Wiki</a>
-        <a href="#">About Creator</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a target="_blank" href="http://paw-patrol.wikia.com/wiki/PAW_Patrol_Wiki">Paw Patrol Fan Wiki</a>
+        <a target="_blank" href="https://www.courtneyolivia.com/about.html">About Creator</a>
+        <a href="contact.html">Contact</a>
     </div>
 
 <div id="main">
