--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Paw Patrol Character Index</title>
+    <title>Paw Patrol Character Fun Facts</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
@@ -15,10 +15,10 @@
 <body>
     <div class="main">
     <div class="header">
-        <h1>Paw Patrol Character Index</h1>
+        <h1>Paw Patrol Character Fun Facts</h1>
         <img src="assets/img/dogs.png">
 
-        <h4>Click a character to learn an interesting fact about them!</h4>
+        <h4>Click a character to learn an fun fact about them!</h4>
     </div>
 
     <div class="nav">
@@ -31,43 +31,55 @@
 <div id="main">
     <div id="pic1">
     <div class="gallery">
+    <div class="grow">
             <img src="assets/img/marshall.png" alt="Marshall" width="600" height="400">
         <div class="desc">Marshall</div>
+    </div>
     </div>
     </div>
 
     <div id="pic2">
     <div class="gallery">
+    <div class="grow">
             <img src="assets/img/chase.png" alt="Chase" width="600" height="400">
         <div class="desc">Chase</div>
+    </div>
     </div>
     </div>
 
     <div id="pic3">
     <div class="gallery">
+    <div class="grow">
             <img src="assets/img/rubble.png" alt="Rubble" width="600" height="400">
         <div class="desc">Rubble</div>
+    </div>
     </div>
     </div>
 
     <div id="pic4">
     <div class="gallery">
+    <div class="grow">
             <img src="assets/img/skye.png" alt="Skye" width="600" height="400">
         <div class="desc">Skye</div>
+    </div>
     </div>
     </div>
 
     <div id="pic5">
     <div class="gallery">
+    <div class="grow">
             <img src="assets/img/zuma.png" alt="Zuma" width="600" height="400">
             <div class="desc">Zuma</div>
+    </div>
     </div>
     </div>
 
     <div id="pic6">
     <div class="gallery">
+    <div class="grow">
             <img src="assets/img/rocky.png" alt="Rocky" width="600" height="400">
         <div class="desc">Rocky</div>
+    </div>
     </div>
     </div>
 </div> 
