Spelling error correction

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Paw Patrol Character Fun Facts</h1>
         <img src="assets/img/dogs.png">
 
-        <h4>Click a character to learn an fun fact about them!</h4>
+        <h4>Click a character to learn a fun fact about them!</h4>
     </div>
 
     <div class="nav">
